--- a/thrivev2.html
+++ b/thrivev2.html
@@ -107,8 +107,8 @@ Thrive is a mobile app-based solution that helps people eat less meat
 			<div class="row">
 				<div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
 					<h4>context</h4>
-					<h3>I couldn't quit Chicken Chalupas from Taco Bell</h3>
-					<p>While watching an environmental documentary titled Cowspiracy, I unexpectedly learned that the animal agriculture industry was the biggest contributor to climate change. With this newfound knowledge, I decided to say goodbye to my meat-rich diet and embrace vegeterianism. However, I couldn't give up the love of my life- chicken chalupas, and hence, a new project emerged.
+					<h3>I needed help quitting Chicken Chalupas from Taco Bell</h3>
+					<p>While watching an environmental documentary titled Cowspiracy, I unexpectedly learned that the animal agriculture industry was a significant contributor to climate change. With this newfound knowledge, I decided to say goodbye to my meat-rich diet and embrace vegetarianism. However, I couldn't give up the love of my life- chicken chalupas, and hence, a new project emerged.
 
 					</p>
 				</div>
@@ -122,7 +122,7 @@ Thrive is a mobile app-based solution that helps people eat less meat
 			<div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
 				<h4>The problem</h4>
 				<h3>Turns out, my mom wants to eat less meat too</h3>
-				<p>Over the last several years, there has been a continuous rise in vegeterian and vegan diets. I found others, like me, who also struggled to limit their meat-intake. <span style="font-weight:600;">I decided to explore, how I can, as a product designer, help people eat less meat. </span></p>
+				<p>Over the last several years, there has been a continuous rise in vegetarian and vegan diets. I found others like me, who also struggled to limit their meat intake. <span style="font-weight:600;">I decided to explore how I can, as a product designer, help people eat less meat. </span></p>
 			</div>
 		</div>
 	</div>
@@ -133,8 +133,8 @@ Thrive is a mobile app-based solution that helps people eat less meat
 		<div class="row">
 			<div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
 				<h4>The solution</h4>
-				<h3>Make behavioral change rewarding, fun, and valuable</h3>
-				<p>My solution is Thrive, an all-in-one mobile app that helps people eat less meat by providing them with the positive encouragement, social support, and the tools needed to succeed.</p><br>
+				<h3>Behavioral change can be fun and rewarding</h3>
+				<p>My solution is Thrive, an all-in-one mobile app that helps people eat less meat by providing them with positive encouragement, social support, and the necessary tools such as vegan recipes.</p><br>
 			</div>
 		</div>
 	</div>
@@ -188,7 +188,7 @@ Thrive is a mobile app-based solution that helps people eat less meat
 						</div></div>
 						<div class="row">
 							<div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
-								<p>My goal was to discover if there was a solution that addressed all 4 interview insights. Examining the pro-veganism apps in the market showed me that the problem space didn't have an all-in-one solution yet.</p><br>
+								<p>My goal was to discover if there was a solution that addressed all four interview insights. Examining the pro-veganism apps in the market showed me that the problem space didn't have an all-in-one solution yet.</p><br>
 								<img src="images/thrivecompetitor.png" class="img-responsive">
 
 <!-- <img src="images/thrivecompetitive.png" class="img-responsive"> -->
@@ -204,7 +204,7 @@ Thrive is a mobile app-based solution that helps people eat less meat
 						<div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
 							<!-- <h4>Discovering Design Opportunities</h4> -->
 							<h4>Personas</h4>
-											<h3>Who are the users?</h3>
+											<h3>Who are my users?</h3>
 											</div></div>
 											<div class="row">
 												<br>
@@ -215,9 +215,9 @@ Thrive is a mobile app-based solution that helps people eat less meat
 				<div class="col-lg-8 col-md-8 col-sm-8 col-xs-12">
 
 
-								<p> <span style= "font-weight:700;">1. The Proactive Mother</span><br>She no longer wants to support the industry responsible for 18% of all harmful gases. Her two sons both have asthma.</p>
-									<p><span style= "font-weight:700;">2. The Young Animal Activist</span><br> Beth works for PETA and she's been vegan since she was 15. The amount of animals she has saved thus far, motivate her.</p>
-										<p><span style= "font-weight:700;">3. The Health Conscious Athlete</span><br> Mark is a boxer who is weary of heart disease. He has a competitive spirit and would love to connect with others in a similar journey.</p>
+								<p> <span style= "font-weight:700;">1. The Proactive Mother</span><br>Julianne is a mom to two young boys with asthma. She no longer wants to support the industry responsible for 18% of all harmful gases.</p>
+									<p><span style= "font-weight:700;">2. The Young Animal Activist</span><br> Beth, an activist for PETA, has been vegan since she was 15. The number of animals she has saved thus far motivates her.</p>
+										<p><span style= "font-weight:700;">3. The Health Conscious Athlete</span><br> Mark is a boxer who is weary of heart disease and has to quit eating meat. He would love to connect with others on a similar journey.</p>
 
 
 									</div>	</div></div></div></div>
@@ -230,7 +230,7 @@ Thrive is a mobile app-based solution that helps people eat less meat
 						<div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
 							<!-- <h4>Discovering Design Opportunities</h4> -->
 							<h4>Journey Map</h4>
-											<h3>Solution needs to be a source for resources</h3>
+											<h3>My target group isn't equipped with any necessary tools </h3>
 											</div></div>
 											<div class="row">
 												<br>
@@ -262,42 +262,49 @@ Thrive is a mobile app-based solution that helps people eat less meat
 						</div></div>
 						<div class="row">
 							<div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
-								<p>After understanding the needs of my target group, I generated a series of themes to consider while ideating: rewarding and enticing, resourceful but above all else, be convenient. Users should not experience a waiting time when they are inputting or expecting data </p>
+								<p>"Rewarding, enticing, and resourceful" were themes I considered while ideating. Above all else, my app needed to be convenient- users should not experience a waiting time when inputting or expecting data.
+
+
+</p>	</div></div>
+<div class="row"><br>
+	<div class="col-lg-6 col-md-6 col-sm-12 col-xs-12">
+					<div class='parent'>
+						<p><div class='rectangle inline-block-child'></div>
+							<span style="	font-family: 'Raleway', sans-serif; font-size: 16px; margin-left: 7px; line-height: 1.7em"> Make it a <span style="font-weight:bold;">mobile app 📱</span></span>
+						</p>
+					</div>
+					<p>Every persona was a busy person on-the-move. The solution needed to be readily accessible.</p>
 
 					<div class='parent'>
 						<p><div class='rectangle inline-block-child'></div>
-							<span style="	font-family: 'Raleway', sans-serif; font-size: 16px; margin-left: 7px; line-height: 1.7em"> Make it a <span style="font-weight:bold;">mobile app</span></span>
+							<span style="	font-family: 'Raleway', sans-serif; font-size: 16px; margin-left: 7px; line-height: 1.7em"><span style="font-weight:bold;">Reward</span> users 🏆</span>
 						</p>
 					</div>
-					<p>All three personas were busy people on-the-move. Solution needed to be readily and easily accessible.</p>
+					<p>Incorporate weekly "meat-free" goals and gamify it. Gamification allows for quick feedback.</p>
+					<div class='parent'>
+						<p><div class='rectangle inline-block-child'></div>
+							<span style="	font-family: 'Raleway', sans-serif; font-size: 16px; margin-left: 7px; line-height: 1.7em">Be <span style="font-weight:bold;">resourceful 🥕</span></span>
+						</p>
+					</div>
+					<p>Provide vegan recipes! People want to eat vegan meals besides PB & J.<p>
+</div>
+<div class="col-lg-6 col-md-6 col-sm-12 col-xs-12">
 
 					<div class='parent'>
 						<p><div class='rectangle inline-block-child'></div>
-							<span style="	font-family: 'Raleway', sans-serif; font-size: 16px; margin-left: 7px; line-height: 1.7em"> How can Thrive <span style="font-weight:bold;">reward</span> its users?</span>
+							<span style="	font-family: 'Raleway', sans-serif; font-size: 16px; margin-left: 7px; line-height: 1.7em"><span style="font-weight:bold;">Motivate</span> Users 💯</span>
 						</p>
 					</div>
-					<p>Include weekly "meat-free day" goal and incorporate a gamified way of displaying progress. Gamification gives people quick feedback and allows them to see their performance level at a glance.</p>
+					<p>Interviewees stated it is hard to see the fruit of their labor after having gone meat-free, so include metrics about users' positive impact.<p>
 
-					<div class='parent'>
-						<p><div class='rectangle inline-block-child'></div>
-							<span style="	font-family: 'Raleway', sans-serif; font-size: 16px; margin-left: 7px; line-height: 1.7em"> How can Thrive <span style="font-weight:bold;">motivate</span> its users?</span>
-						</p>
-					</div>
-					<p>Interviewees consistently mentioned that it is hard to see the difference on the world even after having gone meat-free, so include concrete metrics about their positive impact.<p>
 
-						<div class='parent'>
-							<p><div class='rectangle inline-block-child'></div>
-								<span style="	font-family: 'Raleway', sans-serif; font-size: 16px; margin-left: 7px; line-height: 1.7em"> What do Thrive users <span style="font-weight:bold;">need</span>?</span>
-							</p>
-						</div>
-						<p>Vegan recipes! People want to eat vegan meals besides PB & J.<p>
 
 							<div class='parent'>
 								<p><div class='rectangle inline-block-child'></div>
-									<span style="	font-family: 'Raleway', sans-serif; font-size: 16px; margin-left: 7px; line-height: 1.7em"> What about <span style="font-weight:bold;">social support</span>?</span>
+									<span style="	font-family: 'Raleway', sans-serif; font-size: 16px; margin-left: 7px; line-height: 1.7em"> Provide <span style="font-weight:bold;">social support 🧑‍🤝‍🧑</span></span>
 								</p>
 							</div>
-							<p>Allow Thrive to be a platform where user can form groups with people who are all trying to eat less meat and engage in friendly competition through leaderboards.<p>
+							<p>Connect users with others who are also trying to eat less meat and allow them to engage in friendly competition on leaderboards.<p>
 </div>
 	</div>
 	</div>
@@ -309,28 +316,14 @@ Thrive is a mobile app-based solution that helps people eat less meat
 		<div class="row">
 						<div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
 							<h4>content strategy</h4>
-								<h3>Seamless experience & user flow</h3><br>
-									<p>After determining the final features, I created scenarios <span style="font-weight:bold;">(image 2)</span> detailing 3 key interactions between my app and its users. Then, I created a user flow to form the backbone of the app <span style="font-weight:bold;">(image 1)</span>.
- </p><br>
-
-								<div class="w3-content w3-display-container">
-
-		<div class="w3-display-container mySlides2">
-		<img src="images/thriveflow.png" style="width:100%">
-
-		</div>
-
-		<div class="w3-display-container mySlides2">
-		<img src="images/thrivedecisions.png" style="width:100%">
-
-		</div>
+								<h3>Building a well-integrated and logical flow</h3>
+									<!-- <p>After determining the final features, I created scenarios <span style="font-weight:bold;">(image 2)</span> detailing 3 key interactions between my app and its users. Then, I created a user flow to form the backbone of the app <span style="font-weight:bold;">(image 1)</span>.
+ </p><br> -->
+ <p>After determining the final features, I iterated on a flow that required the least amount of user input. I chose to use a bottom nav over a hamburger menu to help users move quickly.
+</p><br>		<img src="images/thriveflow.png" style="width:100%">
 
 
 
-		<button class="w3-button w3-display-left w3-black" onclick="plusDivs(-1)">&#10094;</button>
-		<button class="w3-button w3-display-right w3-black" onclick="plusDivs(1)">&#10095;</button>
-
-		</div>
 
 						</div></div>
 
@@ -356,8 +349,9 @@ Thrive is a mobile app-based solution that helps people eat less meat
 
 																	</div>
 																	<div class="col-lg-3 col-md-3 col-sm-3 col-xs-12">
-																		<h3>Tabs VS Scroll</h3>
-																		<p>Users preferred to scroll over tabbing. <br><br> I went forward with option b because scrolling helped with information visibility and made it easier for users to digest the content.</p>
+																		<h3>The Winner?</h3>
+																		<p>Users preferred to scroll.</p>
+																			<p>I went forward with option B because scrolling allowed for better information visibility and content digestion.</p>
 
 </div></div><br><br><br><br><br><br>
 						<div class="row">
@@ -366,9 +360,9 @@ Thrive is a mobile app-based solution that helps people eat less meat
 
 														</div>
 														<div class="col-lg-4 col-md-4 col-sm-4 col-xs-12">
-															<h3>Sticky VS Floating</h3>
-															<p>Users preferred the smaller FAB over the larger, sticky button.
-															<br><br>I went ahead with option B because users are more familiar with the smaller FAB and it also took up less screen space.</p>
+															<h3>The Winner?</h3>
+															<p>Users preferred the smaller FAB.</p>
+															<p>I went ahead with option B because users are more familiar with the smaller FAB when compared to the sticky button. The smaller FAB also took up less precious screen space.</p>
 
 </div>
 						</div>
@@ -421,7 +415,7 @@ Thrive is a mobile app-based solution that helps people eat less meat
 </div>
 				<div class="col-lg-8 col-md-8 col-sm-8 col-xs-12">
 
-								<p> <span style= "font-weight:700;">1. Typography</span><br>I wanted to work with a typeface that can be used for headers, body copy, and captions. I went with the classic and accedssible Source Sans Pro for optimal legibility.</p>
+								<p> <span style= "font-weight:700;">1. Typography</span><br>I wanted to work with a typeface that can be used for headers, body copy, and captions. I went with the classic and accessible Source Sans Pro for optimal legibility.</p>
 									<p><span style= "font-weight:700;">2. UI Buttons</span><br>Originally, I experimented with creating entirely new UI components but learned early on that users weren't comfortable with my patterns. I ultimately turned to Google Design Material Guidelines.</p>
 										<p><span style= "font-weight:700;">3. Color</span><br> I wanted my app to have a white background to make sure the content is easy to read. For the UI, I opted for a <span style="color: #fd7660; font-weight:600;">bright orange</span> for the most important action button and a <span style="color: #1b89b6;font-weight:600">complementary teal</span> for the rest.</p>
 
@@ -438,37 +432,35 @@ Thrive is a mobile app-based solution that helps people eat less meat
 			<div class="row">
 							<div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
 								<h4 style="color:#fff;">Solution</h4>
-									<h3 style="color:#fff;">Final Solution</h3>
-									<!-- <p>Most notable change from the first and second prototype was how my weekly goal illustration was displayed in the Achievements screen. In the previous usability testing, users reported that they could not tell what stage of the goal they were in because there was just an image and a "plus" button which gave them no context. So for the second prototype, I included a day by day goal indicator.</p> -->
 									</div>
 		</div>
 
 		<div class= "row">
-			<div class="col-lg-4 col-md-5 col-sm-6">
-				<h3 style="color:#EDB059;"><span style="font-weight: bold;">FEATURE I</span><br>VISUALIZATION OF PROGRESS</h3>
+			<div class="col-lg-4 col-md-4 col-sm-4">
+				<h3 style="color:#fd7660;"><span style="font-weight: bold;">FEATURE I</span><br>VISUALIZATION OF PROGRESS</h3>
 				<p style="color:#fff;">Users can daily log their meat-free days throughout the week and be encouraged by the visual representation of the environment improving.</p>
 				<p style="color:#fff;">Users are able to track their progress and see the positive impact of their accumulated meat-free days.</p>
 </div>
-			<div class="col-lg-8 col-md-7 col-sm-6">
-		<br>	<img class="center" src="images/achievements.gif" style="max-width:70%" alt="manager"><br><br><br><br><br><br><br><br>
+			<div class="col-lg-8 col-md-8 col-sm-8">
+		<br>	<img class="center" src="images/achievements.gif" style="max-width:60%" alt="manager"><br><br><br><br><br><br><br><br>
 		</div>
 	</div>
 
 		<div class= "row">
-			<div class="col-lg-4 col-md-5 col-sm-6">
-				<h3 style="color:#EDB059;"><span style="font-weight: bold;">FEATURE II</span><br>FRIENDLY MOTIVATION</h3>
+			<div class="col-lg-4 col-md-4 col-sm-4">
+				<h3 style="color:#fd7660;"><span style="font-weight: bold;">FEATURE II</span><br>FRIENDLY MOTIVATION</h3>
 				<p style="color:#fff;">Users can form groups with people who have similar goals and compare how they rank to their peers in numnber of meat-free days.</p></div>
-				<div class="col-lg-8 col-md-7 col-sm-6">
-			<br>	<img class="center" src="images/groups.gif" style="max-width:70%" alt="manager"><br><br><br><br><br><br><br><br>
+				<div class="col-lg-8 col-md-8 col-sm-8">
+			<br>	<img class="center" src="images/groups.gif" style="max-width:60%" alt="manager"><br><br><br><br><br><br><br><br>
 			</div>
 		</div>
 		<div class= "row">
-			<div class="col-lg-4 col-md-5 col-sm-6">
-				<h3 style="color:#EDB059;"><span style="font-weight: bold;">FEATURE III</span><br>TOOLS FOR SUCCESS</h3>
+			<div class="col-lg-4 col-md-4 col-sm-4">
+				<h3 style="color:#fd7660;"><span style="font-weight: bold;">FEATURE III</span><br>TOOLS FOR SUCCESS</h3>
 				<p style="color:#fff;">Users can look up recipes or learn about vegan diets to equip themselves on this journey.</p>
 			</div>
-			<div class="col-lg-8 col-md-7 col-sm-6">
-			<br>	<img class="center" src="images/recipes.gif" style="max-width:70%" alt="manager">
+			<div class="col-lg-8 col-md-8 col-sm-8">
+			<br>	<img class="center" src="images/recipes.gif" style="max-width:60%" alt="manager">
 			</div>
 	</div>
 </div>
@@ -539,44 +531,6 @@ Thrive is a mobile app-based solution that helps people eat less meat
 <script src="js/wow.min.js"></script>
 <script src="js/custom.js"></script>
 <script>
-var slideIndex = 1;
-showDivs(slideIndex);
-
-function plusDivs(n) {
-  showDivs(slideIndex += n);
-}
-
-function showDivs(n) {
-  var i;
-  var x = document.getElementsByClassName("mySlides");
-  if (n > x.length) {slideIndex = 1}
-  if (n < 1) {slideIndex = x.length}
-  for (i = 0; i < x.length; i++) {
-     x[i].style.display = "none";
-  }
-  x[slideIndex-1].style.display = "block";
-}
-</script>
-
-
-<script>
-var slideIndex = 1;
-showDivs(slideIndex);
-
-function plusDivs(n) {
-  showDivs(slideIndex += n);
-}
-
-function showDivs(n) {
-  var i;
-  var x = document.getElementsByClassName("mySlides2");
-  if (n > x.length) {slideIndex = 1}
-  if (n < 1) {slideIndex = x.length}
-  for (i = 0; i < x.length; i++) {
-     x[i].style.display = "none";
-  }
-  x[slideIndex-1].style.display = "block";
-}
 
 
 $('button').on('mousedown',
