--- a/thrivev2.html
+++ b/thrivev2.html
@@ -415,9 +415,15 @@ Thrive is a mobile app-based solution that helps people eat less meat
 </div>
 				<div class="col-lg-8 col-md-8 col-sm-8 col-xs-12">
 
-								<p> <span style= "font-weight:700;">1. Typography</span><br>I wanted to work with a typeface that can be used for headers, body copy, and captions. I went with the classic and accessible Source Sans Pro for optimal legibility.</p>
-									<p><span style= "font-weight:700;">2. UI Buttons</span><br>Originally, I experimented with creating entirely new UI components but learned early on that users weren't comfortable with my patterns. I ultimately turned to Google Design Material Guidelines.</p>
-										<p><span style= "font-weight:700;">3. Color</span><br> I wanted my app to have a white background to make sure the content is easy to read. For the UI, I opted for a <span style="color: #fd7660; font-weight:600;">bright orange</span> for the most important action button and a <span style="color: #1b89b6;font-weight:600">complementary teal</span> for the rest.</p>
+								<p> <span style= "font-weight:700;">1. Typography</span><br>Typeface needed to work headers, body copy, and captions. I chose the classic and accessible Source Sans Pro for optimal legibility.</p>
+								<img src="images/thrivetypeface.png" class="img-responsive">
+
+									<p><span style= "font-weight:700;">2. UI Buttons</span><br>I learned that users weren't comfortable with my newly created patterns. I ultimately turned to Google's Material Design.</p>
+									<img src="images/thriveui.png" class="img-responsive">
+
+										<p><span style= "font-weight:700;">3. Color</span><br> I wanted a white background to make sure the content is easy to read. For the UI, I opted for a <span style="color: #fd7660; font-weight:600;">bright orange</span> and a <span style="color: #1b89b6;font-weight:600">complementary teal</span>.</p>
+										<img src="images/thrivecolor.png" class="img-responsive">
+
 
 
 									</div>	</div></div></div></div>
