--- a/thrivev2.html
+++ b/thrivev2.html
@@ -349,7 +349,7 @@ Thrive is a mobile app-based solution that helps people eat less meat
 
 																	</div>
 																	<div class="col-lg-3 col-md-3 col-sm-3 col-xs-12">
-																		<h3>The Winner?</h3>
+																		<h4>The Winner?</h4>
 																		<p>Users preferred to scroll.</p>
 																			<p>I went forward with option B because scrolling allowed for better information visibility and content digestion.</p>
 
@@ -360,7 +360,7 @@ Thrive is a mobile app-based solution that helps people eat less meat
 
 														</div>
 														<div class="col-lg-4 col-md-4 col-sm-4 col-xs-12">
-															<h3>The Winner?</h3>
+															<h4>The Winner?</h4>
 															<p>Users preferred the smaller FAB.</p>
 															<p>I went ahead with option B because users are more familiar with the smaller FAB when compared to the sticky button. The smaller FAB also took up less precious screen space.</p>
 
@@ -376,7 +376,7 @@ Thrive is a mobile app-based solution that helps people eat less meat
 						<div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
 							<h4>Iterating on feedback</h4>
 								<h3>Bringing more clarity with every iteration </h3>
-								<p>I received feedback from potential users and a senior designer I connected with on LinkedIn. With each iteration, the experience was simplified. Most notably, following existing design systems such as Google's material design guidelines and designing on a 8pt grid system helped the UI tremendously.
+								<p>I received feedback from potential users and a designer I connected with on LinkedIn. Following existing design systems such as Google's material guidelines and designing on a 8pt grid tremendously helped.
 </p><br>
 						</div></div>
 
