--- a/thrivev2.html
+++ b/thrivev2.html
@@ -455,7 +455,7 @@ Thrive is a mobile app-based solution that helps people eat less meat
 		<div class= "row">
 			<div class="col-lg-4 col-md-4 col-sm-4">
 				<h3 style="color:#fd7660;"><span style="font-weight: bold;">FEATURE II</span><br>FRIENDLY MOTIVATION</h3>
-				<p style="color:#fff;">Users can form groups with people who have similar goals and compare how they rank to their peers in numnber of meat-free days.</p></div>
+				<p style="color:#fff;">Users can form groups with people who have similar goals and compare how they rank to their peers in number of meat-free days.</p></div>
 				<div class="col-lg-8 col-md-8 col-sm-8">
 			<br>	<img class="center" src="images/groups.gif" style="max-width:60%" alt="manager"><br><br><br><br><br><br><br><br>
 			</div>
@@ -490,13 +490,17 @@ Thrive is a mobile app-based solution that helps people eat less meat
 		<div class="row">
 						<div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
 							<br><br><br><br><br><br><h4>Reflection</h4>
-								<h3>What I learned</h3>
+								<h3>Ultimately, I became a better designer</h3>
 						</div></div>
 						<div class="row">
 							<div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
-								<p>1. Technology only amplifies underlying human forces. So study people, learn about people, and listen to people. For technology to actually work, the right intent and capacity have to be there first.<br><br>
-								2. When designing for an app that is meant to encourage a  lifestyle change, it does not mean I have to include a lot of features. Always consider the bare necessities for a successful product(the mvp).<br><br>
-								3. As designers, we should listen to our users but not blindly allow them to tell us what to do. We need to interpret our findings from user research and make sense of them before supporting out design decisions.
+
+										<p><span style= "font-weight:700;">1. DESIGN SYSTEMS. DESIGN SYSTEMS. DESIGN SYSTEMS.</span><br>I fell in love with the IOS human interface & Google's material design guidelines. Existing systems allow me to use my brain power on other more pressing design decisions.</p>
+
+											<p><span style= "font-weight:700;">2. Think in product & not features </span><br> Originally, I had about about 6 features I wanted to include. But feedback showed that having all 6 features was extremely overwhelming. I learned to ground myself in users' problems and the product's goals.</p>
+
+								3. As designers, we should listen to our users but not blindly allow them to tell us what to do. We need to interpret our findings from user research and make sense of them before supporting out design decisions.<br><br>
+
 
 								</p>
 						</div>
@@ -505,20 +509,7 @@ Thrive is a mobile app-based solution that helps people eat less meat
 </section>
 
 
-<section>
-<div class="contentblock content-wrapper900">
-		<div class="row">
-						<div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
-							<h4>Reflection</h4>
-								<h3>Where to Improve</h3>
-						</div></div>
-						<div class="row">
-							<div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
-								<p>Push myself further in visual design by thinking about the affordances on and transitions between the screens.</p>
-						</div>
-	</div>
-	</div>
-</section>
+
 
 <div class="custom-end">
 	<div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
