--- a/thrivev2.html
+++ b/thrivev2.html
@@ -499,7 +499,8 @@ Thrive is a mobile app-based solution that helps people eat less meat
 
 											<p><span style= "font-weight:700;">2. Think in product & not features </span><br> Originally, I had about about 6 features I wanted to include. But feedback showed that having all 6 features was extremely overwhelming. I learned to ground myself in users' problems and the product's goals.</p>
 
-								3. As designers, we should listen to our users but not blindly allow them to tell us what to do. We need to interpret our findings from user research and make sense of them before supporting out design decisions.<br><br>
+	<p><span style= "font-weight:700;">3. Even as a product designer, visual design skills are important</span><br>With great visual design, users are willing to take the time to learn even the most complex products. Great visual design is undeniably a part of what makes a great UX. Every design decision needs to be intentional.</p>
+							<br><br>
 
 
 								</p>
