--- a/thrivev2.html
+++ b/thrivev2.html
@@ -490,16 +490,16 @@ Thrive is a mobile app-based solution that helps people eat less meat
 		<div class="row">
 						<div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
 							<br><br><br><br><br><br><h4>Reflection</h4>
-								<h3>Ultimately, I became a better designer</h3>
+								<h3>Ultimately, I became a better designer</h3><br>
 						</div></div>
 						<div class="row">
 							<div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
 
-										<p><span style= "font-weight:700;">1. DESIGN SYSTEMS. DESIGN SYSTEMS. DESIGN SYSTEMS.</span><br>I fell in love with the IOS human interface & Google's material design guidelines. Existing systems allow me to use my brain power on other more pressing design decisions.</p>
+										<p><span style= "font-weight:700;">1. DESIGN SYSTEMS. DESIGN SYSTEMS. DESIGN SYSTEMS.</span><br>I fell in love with the IOS human interface & Google's material design guidelines. Existing systems allow me to use my brain power on other more pressing design decisions.</br></br>
 
-											<p><span style= "font-weight:700;">2. Think in product & not features </span><br> Originally, I had about about 6 features I wanted to include. But feedback showed that having all 6 features was extremely overwhelming. I learned to ground myself in users' problems and the product's goals.</p>
+										<span style= "font-weight:700;">2. Think in product & not features </span><br> Originally, I had about about 6 features I wanted to include. But feedback showed that having all 6 features was extremely overwhelming. I learned to ground myself in users' problems and the product's goals.<br></br>
 
-	<p><span style= "font-weight:700;">3. Even as a product designer, visual design skills are important</span><br>With great visual design, users are willing to take the time to learn even the most complex products. Great visual design is undeniably a part of what makes a great UX. Every design decision needs to be intentional.</p>
+<span style= "font-weight:700;">3. Even as a product designer, visual design skills are important</span><br>With great visual design, users are willing to take the time to learn even the most complex products. Great visual design is undeniably a part of what makes a great UX. Every design decision needs to be intentional.</p>
 							<br><br>
 
 
