--- a/thrive.html
+++ b/thrive.html
@@ -257,7 +257,7 @@ Thrive is a mobile app-based solution that helps people eat less meat
 		<div class="row">
 						<div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
 							<h4>Ideation </h4>
-							<h3 style="line-height: 1.5em;">The more users turn to Thrive, the more effective it will be</h3>
+							<h3 style="line-height: 1.5em; letter-spacing:-.005em;"">The more users turn to Thrive, the more effective it will be</h3>
 
 						</div></div>
 						<div class="row">
@@ -350,8 +350,8 @@ Thrive is a mobile app-based solution that helps people eat less meat
 																	</div>
 																	<div class="col-lg-3 col-md-3 col-sm-3 col-xs-12">
 																		<h4>The Winner?</h4>
-																		<p>Users preferred to scroll.</p>
-																			<p>I went forward with option B because scrolling allowed for better information visibility and content digestion.</p>
+																		<p>Scrolling</p>
+																			<p>Scrolling allowed for better information visibility and content digestion.</p>
 
 </div></div><br><br><br><br><br><br>
 						<div class="row">
@@ -361,8 +361,8 @@ Thrive is a mobile app-based solution that helps people eat less meat
 														</div>
 														<div class="col-lg-4 col-md-4 col-sm-4 col-xs-12">
 															<h4>The Winner?</h4>
-															<p>Users preferred the smaller FAB.</p>
-															<p>I went ahead with option B because users are more familiar with the smaller FAB when compared to the sticky button. The smaller FAB also took up less precious screen space.</p>
+															<p>Smaller FAB</p>
+															<p>The FAB was familiar to users and it took up less screen space.</p>
 
 </div>
 						</div>
@@ -376,7 +376,9 @@ Thrive is a mobile app-based solution that helps people eat less meat
 						<div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
 							<h4>Iterating on feedback</h4>
 								<h3>Bringing more clarity with every iteration </h3>
-								<p>I received feedback from potential users and a designer I connected with on LinkedIn. Following existing design systems such as Google's material guidelines and designing on a 8pt grid tremendously helped.
+								<p>There were many other iterations not shown here. From wireframes to v1, I made design decisions that can account for uncommon use cases such as adding or deleting a group. From v1 to v2, I decided to improve the IA and increase the prominence of the search bar to promote exploratory behavior.
+Lastly, following existing design systems and designing on an 8pt grid tremendously helped the interface design.
+
 </p><br>
 						</div></div>
 
