--- a/thrive.html
+++ b/thrive.html
@@ -446,8 +446,8 @@ Lastly, following existing design systems and designing on an 8pt grid tremendou
 		<div class= "row">
 			<div class="col-lg-4 col-md-4 col-sm-4">
 				<h3 style="color:#fd7660;"><span style="font-weight: bold;">FEATURE I</span><br>VISUALIZATION OF PROGRESS</h3>
-				<p style="color:#fff;">Users can daily log their meat-free days throughout the week and be encouraged by the visual representation of the environment improving.</p>
-				<p style="color:#fff;">Users are able to track their progress and see the positive impact of their accumulated meat-free days.</p>
+				<p style="color:#fff;">Users can daily log their meat-free days throughout the week and be encouraged by the visual representation of the improving environment. </p>
+				<p style="color:#fff;">Users can track their progress and see the positive impact of their accumulated meat-free days.</p>
 </div>
 			<div class="col-lg-8 col-md-8 col-sm-8">
 		<br>	<img class="center" src="images/achievements.gif" style="max-width:60%" alt="manager"><br><br><br><br><br><br><br><br>
@@ -457,7 +457,7 @@ Lastly, following existing design systems and designing on an 8pt grid tremendou
 		<div class= "row">
 			<div class="col-lg-4 col-md-4 col-sm-4">
 				<h3 style="color:#fd7660;"><span style="font-weight: bold;">FEATURE II</span><br>FRIENDLY MOTIVATION</h3>
-				<p style="color:#fff;">Users can form groups with people who have similar goals and compare how they rank to their peers in number of meat-free days.</p></div>
+				<p style="color:#fff;">Users can form groups with people who have similar goals and compare how they rank to their peers in the number of meat-free days.</p></div>
 				<div class="col-lg-8 col-md-8 col-sm-8">
 			<br>	<img class="center" src="images/groups.gif" style="max-width:60%" alt="manager"><br><br><br><br><br><br><br><br>
 			</div>
@@ -497,9 +497,9 @@ Lastly, following existing design systems and designing on an 8pt grid tremendou
 						<div class="row">
 							<div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
 
-										<p><span style= "font-weight:700;">1. DESIGN SYSTEMS. DESIGN SYSTEMS. DESIGN SYSTEMS.</span><br>I fell in love with the IOS human interface & Google's material design guidelines. Existing systems allow me to use my brain power on other more pressing design decisions.</br></br>
+										<p><span style= "font-weight:700;">1. DESIGN SYSTEMS. DESIGN SYSTEMS. DESIGN SYSTEMS.</span><br>I fell in love with the IOS human interface & Google's material design guidelines. Existing systems allow me to use my brainpower on other more pressing design decisions.</br></br>
 
-										<span style= "font-weight:700;">2. Think in product & not features </span><br> Originally, I had about about 6 features I wanted to include. But feedback showed that having all 6 features was extremely overwhelming. I learned to ground myself in users' problems and the product's goals.<br></br>
+										<span style= "font-weight:700;">2. Think in product & not features </span><br> Originally, I had about six features I wanted to include. But feedback showed that having all six features was extremely overwhelming. I learned to ground myself in users' problems and the product's goals.<br></br>
 
 <span style= "font-weight:700;">3. Even as a product designer, visual design skills are important</span><br>With great visual design, users are willing to take the time to learn even the most complex products. Great visual design is undeniably a part of what makes a great UX. Every design decision needs to be intentional.</p>
 							<br><br>
