--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
 							<div style="padding-left: 3em; padding-top:2em;padding-bottom:1em;">
 								<h3>Thrive</h3>
 								<h4>PRODUCT DESIGNER | SPRING 2020</h4>
-								<p style="padding-top:.7em;">I drove a user-centered design project to create a mobile app for people who want to eat less meat.</p>
+								<p style="padding-top:.7em;">I drove a user-centered design project to design a mobile app for people who want to eat less meat.</p>
 							</div>
 							<div style="padding-left: 3em;">
 							<a class="button" href="thrive.html">View Case Study</a>
