--- a/lexmarkv2.html
+++ b/lexmarkv2.html
@@ -11,7 +11,7 @@
 	  gtag('config', 'UA-144593656-1');
 	</script>
 	<!-- SITE TITLE -->
-	<title>Thrive | Michelle Kim's Portfolio</title>
+	<title>Lexmark | Michelle Kim's Portfolio</title>
 
 
 	<meta http-equiv="X-UA-Compatible" content="IE=Edge">
@@ -65,9 +65,11 @@
 		<div class="content-wrapper900">
 			<div class="row">
 				<div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
-					<h1>Thrive</h1>
+					<h1>Lexmark Internship</h1>
 <h2>
-Thrive is a mobile app-based solution that helps people eat less meat
+I redesigned Lexmark's internal tool to improve its information architecture, interface design, and interaction design for a better user experience
+
+
 
 </h2>
 				</div>
@@ -76,7 +78,7 @@ Thrive is a mobile app-based solution that helps people eat less meat
 	</section>
 
 	<section id=introimg>
-		<img src="images/thriveintro.png" class="img-responsive">
+		<img src="images/lexmarkintro.png" class="img-responsive">
 	</section>
 
 	<section>
@@ -84,30 +86,106 @@ Thrive is a mobile app-based solution that helps people eat less meat
 		<div class="row">
 			<div class="col-lg-3 col-md-3 col-sm-3 col-xs-12">
 				<p class="overview-info">Role</p>
-				<p style="line-height:1.5em;"> Product Designer</p>
+				<p style="line-height:1.5em;">UX Design Intern</p>
 			</div>
 			<div class="col-lg-3 col-md-3 col-sm-3 col-xs-12">
 				<p class="overview-info">Duration</p>
-				<p style="line-height:1.5em;"> 5 months</p>
+				<p style="line-height:1.5em;"> 3 months</p>
 			</div>
 			<div class="col-lg-3 col-md-3 col-sm-3 col-xs-12">
 				<p class="overview-info">Tools</p>
-				<p style="line-height:1.5em;">Sketch, InVision,<br>Currently tinkering w/ Principle</p>
+				<p style="line-height:1.5em;">Axure, Adobe XD</p>
 			</div>
 			<div class="col-lg-3 col-md-3 col-sm-3 col-xs-12">
 				<p class="overview-info">Type</p>
-				<p style="line-height:1.5em;">Individual Side Project</p>
+				<p style="line-height:1.5em;">Internship</p>
 			</div>
 		</div>
 		</div>
 	</section>
 
+  <section>
+    <div class="content-wrapper900">
+      <div class="row">
+        <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
+          <h4>background</h4>
+          <h3>I redesigned Lexmark's internal tool ServiceNow</h3>
+          <p>ServiceNow is a customizable SaaS for technical management support. As you can see in the dashboard below, Lexmark uses ServiceNow for a variety of jobs. For my internship project, I redesigned the Facilities and Site Operations section of the platform. In F/S Operations, users can submit requests for anything they need. Requests can include requesting access to specific software or requesting maintenance because you just spilled coffee in the hallway.
+<p><br>
+
+
+          </p>
+        </div>
+      </div>
+    </div>
+  </section>
+
+  <section>
+    <div class="contentblock content-wrapper914">
+      <div class="row">
+        <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
+            <img src="images/lexmarkhome.png" class="img-responsive">
+        </div>
+      </div>
+    </div>
+  </section>
+
+
+
+  <section>
+		<div class="contentblock content-wrapper900">
+			<div class="row">
+				<div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
+					<h4>The Problem</h4>
+					<h3 style="line-height: 1.5em;">Lexmark's implementation of ServiceNow was the plague</h3>
+					<p>Everyone avoided it and the manager of the ServiceNow team was miserable. There was an entire team dedicated to fleshing out ServiceNow for Lexmark employees, but people weren't using the platform as much as they should.
+
+erviceNow received over 4000 service requests in the last 12 months. On the other hand, 88% of service requests were processed over traditional phone calls.
+
+
+					</p>
+				</div>
+			</div>
+		</div>
+	</section>
+
+  <section>
+		<div class="contentblock content-wrapper900">
+			<div class="row">
+				<div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
+					<h4>The *Ouch*</h4>
+					<h3 style="line-height: 1.5em;">These phone calls had a cost... and the cost was large</h3>
+					<p>With tens of thousands of requests coming through the phone, phone lines were always busy. This meant extra employees were required to be on standby and employees calling the requests in experienced longer wait times which prevented them from doing their actual jobs. In business, time is money.
+
+
+					</p>
+				</div>
+			</div>
+		</div>
+	</section>
+
+
+  <section>
+    <div class="contentblock content-wrapper900">
+      <div class="row">
+        <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
+          <h4>The challenge</h4>
+          <h3 style="line-height: 1.5em;">Improve the UX of ServiceNow</h3>
+          <p>The ServiceNow team manager asked the UX team to help increase the usage of ServiceNow. I began to explore how I can as a UX designer improve employees' opinions of this platform. I hoped that by improving the user experience of ServiceNow, people's opinions on the platform will become positive, and ultimtely, usage of the platform will increase.
+
+          </p>
+        </div>
+      </div>
+    </div>
+  </section>
+
+
 	<section>
 		<div class="contentblock content-wrapper900">
 			<div class="row">
 				<div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
-					<h4>context</h4>
-					<h3>I needed help quitting Chicken Chalupas from Taco Bell</h3>
+					<h4>original design</h4>
+					<h3>Lexmark emplo</h3>
 					<p>While watching an environmental documentary titled Cowspiracy, I unexpectedly learned that the animal agriculture industry was a significant contributor to climate change. With this newfound knowledge, I decided to say goodbye to my meat-rich diet and embrace vegetarianism. However, I couldn't give up the love of my life- chicken chalupas, and hence, a new project emerged.
 
 					</p>
@@ -115,6 +193,20 @@ Thrive is a mobile app-based solution that helps people eat less meat
 			</div>
 		</div>
 	</section>
+
+  <section>
+    <div class="contentblock content-wrapper900">
+      <div class="row">
+        <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
+          <h4>solution aka my redesign</h4>
+          <h3>Lexmark emplo</h3>
+          <p>While watching an environmental documentary titled Cowspiracy, I unexpectedly learned that the animal agriculture industry was a significant contributor to climate change. With this newfound knowledge, I decided to say goodbye to my meat-rich diet and embrace vegetarianism. However, I couldn't give up the love of my life- chicken chalupas, and hence, a new project emerged.
+
+          </p>
+        </div>
+      </div>
+    </div>
+  </section>
 
 <section>
 	<div class="contentblock content-wrapper900">
@@ -217,7 +309,7 @@ Thrive is a mobile app-based solution that helps people eat less meat
 
 								<p> <span style= "font-weight:700;">1. The Proactive Mother</span><br>Julianne is a mom to two young boys with asthma. She no longer wants to support the industry responsible for 18% of all harmful gases.</p>
 									<p><span style= "font-weight:700;">2. The Young Animal Activist</span><br> Beth, an activist for PETA, has been vegan since she was 15. The number of animals she has saved thus far motivates her.</p>
-										<p><span style= "font-weight:700;">3. The Health Conscious Athlete</span><br> Mark is a boxer who is weary of heart disease and has to eat less beef. He would love to connect with others on a similar journey.</p>
+										<p><span style= "font-weight:700;">3. The Health Conscious Athlete</span><br> Mark is a boxer who is weary of heart disease and has to quit eating meat. He would love to connect with others on a similar journey.</p>
 
 
 									</div>	</div></div></div></div>
@@ -230,7 +322,7 @@ Thrive is a mobile app-based solution that helps people eat less meat
 						<div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
 							<!-- <h4>Discovering Design Opportunities</h4> -->
 							<h4>Journey Map</h4>
-											<h3>My target group isn't equipped with the necessary tools </h3>
+											<h3>My target group isn't equipped with any necessary tools </h3>
 											</div></div>
 											<div class="row">
 												<br>
@@ -417,7 +509,7 @@ Lastly, following existing design systems and designing on an 8pt grid tremendou
 </div>
 				<div class="col-lg-8 col-md-8 col-sm-8 col-xs-12">
 
-								<p> <span style= "font-weight:700;">1. Typography</span><br>Typeface needed to work with headers, body copy, and captions. I chose the classic and accessible Source Sans Pro for optimal legibility.</p>
+								<p> <span style= "font-weight:700;">1. Typography</span><br>Typeface needed to work headers, body copy, and captions. I chose the classic and accessible Source Sans Pro for optimal legibility.</p>
 								<img src="images/thrivetypeface.png" class="img-responsive">
 
 									<p><span style= "font-weight:700;">2. UI Buttons</span><br>I learned that users weren't comfortable with my newly created patterns. I ultimately turned to Google's Material Design.</p>
@@ -497,11 +589,11 @@ Lastly, following existing design systems and designing on an 8pt grid tremendou
 						<div class="row">
 							<div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
 
-										<p><span style= "font-weight:700;">1. DESIGN SYSTEMS. DESIGN SYSTEMS. DESIGN SYSTEMS.</span><br>I fell in love with the IOS human interface & Google's material design guidelines. Existing systems allow me to use my brainpower on other more complex design decisions.</br></br>
+										<p><span style= "font-weight:700;">1. DESIGN SYSTEMS. DESIGN SYSTEMS. DESIGN SYSTEMS.</span><br>I fell in love with the IOS human interface & Google's material design guidelines. Existing systems allow me to use my brainpower on other more pressing design decisions.</br></br>
 
 										<span style= "font-weight:700;">2. Think in product & not features </span><br> Originally, I had about six features I wanted to include. But feedback showed that having all six features was extremely overwhelming. I learned to ground myself in users' problems and the product's goals.<br></br>
 
-<span style= "font-weight:700;">3. Even as a product designer, visual design skills are important</span><br>With great visual design, users are willing to take the time to learn even the most unfamiliar products. Great visual design is undeniably a part of a great user experience. Every design decision needs to be intentional.</p>
+<span style= "font-weight:700;">3. Even as a product designer, visual design skills are important</span><br>With great visual design, users are willing to take the time to learn even the most complex products. Great visual design is undeniably a part of what makes a great UX. Every design decision needs to be intentional.</p>
 							<br><br>
 
 
